// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneAddressFields /> should allow to use company information for validation 1`] = `
<div>
  <div
    class="mb-3 row"
  >
    <div
      class="pr-0 col"
    >
      <div
        aria-checked="true"
        aria-label="Business information"
        class="wrapper selected"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="company"
          >
            <input
              checked=""
              class="input"
              id="company"
              tabindex="-1"
              type="radio"
            />
            Business information
          </label>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        aria-checked="false"
        aria-label="Personal information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="personal"
          >
            <input
              class="input"
              id="personal"
              tabindex="-1"
              type="radio"
            />
            Personal information
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-13"
      >
        Business name
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-13"
          name="input-text-13"
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-15"
      >
        Address
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-15"
          name="input-text-15"
          placeholder="Street address, apartment, suite etc."
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-17"
          >
            City
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-17"
              name="input-text-17"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-19"
          >
            State/Province/Region
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-19"
              name="input-text-19"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-21"
          >
            Postal Code
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-21"
              name="input-text-21"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label isDisabled label"
            for="input-text-23"
          >
            Country
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper isDisabled"
          >
            <input
              class="input"
              disabled=""
              id="input-text-23"
              name="input-text-23"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneAddressFields /> should allow to use personal information for validation 1`] = `
<div>
  <div
    class="mb-3 row"
  >
    <div
      class="pr-0 col"
    >
      <div
        aria-checked="false"
        aria-label="Business information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="company"
          >
            <input
              class="input"
              id="company"
              tabindex="-1"
              type="radio"
            />
            Business information
          </label>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        aria-checked="true"
        aria-label="Personal information"
        class="wrapper selected"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="personal"
          >
            <input
              checked=""
              class="input"
              id="personal"
              tabindex="-1"
              type="radio"
            />
            Personal information
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-25"
      >
        Name
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-25"
          name="input-text-25"
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-27"
      >
        Address
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-27"
          name="input-text-27"
          placeholder="Street address, apartment, suite etc."
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-29"
          >
            City
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-29"
              name="input-text-29"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-31"
          >
            State/Province/Region
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-31"
              name="input-text-31"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-33"
          >
            Postal Code
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-33"
              name="input-text-33"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label isDisabled label"
            for="input-text-35"
          >
            Country
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper isDisabled"
          >
            <input
              class="input"
              disabled=""
              id="input-text-35"
              name="input-text-35"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneAddressFields /> should display the country name in a disabled field 1`] = `
<div>
  <div
    class="mb-3 row"
  >
    <div
      class="pr-0 col"
    >
      <div
        aria-checked="false"
        aria-label="Business information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="company"
          >
            <input
              class="input"
              id="company"
              tabindex="-1"
              type="radio"
            />
            Business information
          </label>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        aria-checked="false"
        aria-label="Personal information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="personal"
          >
            <input
              class="input"
              id="personal"
              tabindex="-1"
              type="radio"
            />
            Personal information
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-37"
      >
        Business name
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-37"
          name="input-text-37"
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-39"
      >
        Address
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          aria-describedby="input-text-39-caption"
          class="input"
          id="input-text-39"
          name="input-text-39"
          placeholder="Street address, apartment, suite etc."
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="caption"
        id="input-text-39-caption"
      >
        Note: PO Boxes are not allowed for local Australian numbers.
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-41"
          >
            City
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-41"
              name="input-text-41"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-43"
          >
            State/Province/Region
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-43"
              name="input-text-43"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-45"
          >
            Postal Code
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-45"
              name="input-text-45"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label isDisabled label"
            for="input-text-47"
          >
            Country
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper isDisabled"
          >
            <input
              class="input"
              disabled=""
              id="input-text-47"
              name="input-text-47"
              required=""
              type="text"
              value="Australia"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneAddressFields /> should render 1`] = `
<div>
  <div
    class="mb-3 row"
  >
    <div
      class="pr-0 col"
    >
      <div
        aria-checked="false"
        aria-label="Business information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="company"
          >
            <input
              class="input"
              id="company"
              tabindex="-1"
              type="radio"
            />
            Business information
          </label>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        aria-checked="false"
        aria-label="Personal information"
        class="wrapper"
        role="radio"
        tabindex="0"
      >
        <div>
          <label
            class="label label"
            for="personal"
          >
            <input
              class="input"
              id="personal"
              tabindex="-1"
              type="radio"
            />
            Personal information
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-1"
      >
        Business name
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-1"
          name="input-text-1"
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <div>
      <label
        class="label label"
        for="input-text-3"
      >
        Address
        <abbr
          aria-label="required"
          class="abbr"
          title="required"
        >
          *
        </abbr>
      </label>
      <div
        class="wrapper"
      >
        <input
          class="input"
          id="input-text-3"
          name="input-text-3"
          placeholder="Street address, apartment, suite etc."
          required=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-5"
          >
            City
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-5"
              name="input-text-5"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-7"
          >
            State/Province/Region
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-7"
              name="input-text-7"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="pr-0 col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label label"
            for="input-text-9"
          >
            Postal Code
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-9"
              name="input-text-9"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="form-group"
      >
        <div>
          <label
            class="label isDisabled label"
            for="input-text-11"
          >
            Country
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper isDisabled"
          >
            <input
              class="input"
              disabled=""
              id="input-text-11"
              name="input-text-11"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
